# Attesta-protocol-backend

./: .env.example  .gitignore  Cargo.toml  Dockerfile  ISSUES-2.md  ISSUES.md  README.md  docker-compose.yml
.claude/skills/verify/: SKILL.md
artifacts/: README.md
crates/attesta-api/: Cargo.toml
crates/attesta-api/src/: error.rs  limits.rs  main.rs  retention.rs  state.rs  telemetry.rs
crates/attesta-api/src/routes/: artifacts.rs  issuer.rs  mod.rs  notes.rs  stats.rs  tree.rs
crates/attesta-core/: Cargo.toml
crates/attesta-core/src/: config.rs  db.rs  error.rs  lib.rs  merkle.rs  models.rs
crates/attesta-disclosure/: Cargo.toml
crates/attesta-disclosure/src/: main.rs
crates/attesta-indexer/: Cargo.toml
crates/attesta-indexer/src/: events.rs  ingest.rs  main.rs  rpc.rs
docs/: credential-mailbox.md  operations.md
migrations/: 0001_init.sql  0002_tree_roots.sql  0003_mailbox_lifecycle.sql  0004_issuer_quota_index.sql  0005_notes_notify.sql
