[workspace]
resolver = "2"
members = [
    "crates/attesta-core",
    "crates/attesta-api",
    "crates/attesta-indexer",
    "crates/attesta-disclosure",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Ejirosoft/Attesta-protocol-backend"

[workspace.dependencies]
attesta-core = { path = "crates/attesta-core" }

anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", default-features = false, features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "chrono",
    "uuid",
    "migrate",
    "macros",
] }
axum = "0.8"
tower-http = { version = "0.6", features = ["trace", "cors", "limit"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
hex = "0.4"
base64 = "0.22"
sha2 = "0.10"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
dotenvy = "0.15"
stellar-xdr = { version = "27", features = ["base64"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.17", default-features = false, features = ["http-listener"] }

[profile.release]
lto = "thin"
strip = true
