[package]
name = "attesta-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
attesta-core.workspace = true

anyhow.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
dotenvy.workspace = true
futures.workspace = true
hex.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
