[package]
name = "attesta-disclosure"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "disclosure"
path = "src/main.rs"

[dependencies]
attesta-core.workspace = true

anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
hex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
