[package]
name = "attesta-indexer"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "indexer"
path = "src/main.rs"

[dependencies]
attesta-core.workspace = true

anyhow.workspace = true
base64.workspace = true
dotenvy.workspace = true
hex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
